--- a/dockerfile-sample-2/index.html
+++ b/dockerfile-sample-2/index.html
@@ -5,9 +5,24 @@
 
   <title>Your 2nd Dockerfile worked!</title>
 
+  <style>
+    button{
+      padding:10px 20px;
+      border-radius: 9px;
+      background-color: violet;
+      border: none;
+      margin: 10px 0;
+    }
+    h2{
+      text-align: right;
+    }
+  </style>
 </head>
 
 <body>
   <h1>You just successfully ran a container with a custom file copied into the image at build time!</h1>
+  <hr />
+  <button>Cace</button>
+  <h2>By Strahinja</h2>
 </body>
 </html>
